20071129 initial revision.
20071129 configure.in: fix AC_INIT call.

$Id$